--- a/dicee.html
+++ b/dicee.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Dice Game</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
-
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster"
+      rel="stylesheet"
+    />
   </head>
   <body>
-
     <div class="container">
       <h1>Refresh Me</h1>
 
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" src="./images/dice6.png">
+        <img class="img1" src="./images/dice6.png" />
       </div>
 
       <div class="dice">
         <p>Player 2</p>
-        <img class="img2" src="./images/dice6.png">
+        <img class="img2" src="./images/dice6.png" />
       </div>
 
+      <br /><br /><br />
+      <h3>Refresh the page</h3>
     </div>
 
     <script src="./index.js"></script>
   </body>
 
-  <footer>
-    AqueelurRahman
-  </footer>
-
-  
+  <footer>© Aqueel ur Rahman</footer>
 </html>
